@@ -1,3 +1,8 @@
+Thu Mar 18 18:13:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* mvm.c (vm_init_options), ruby.c (rb_vm_options_init): properly
+	  initialize rb_vm_options.
+
 Thu Mar 18 15:29:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* thread.c (ruby_vm_spawn): tentative implementation.
